refactor: update various components to use Adventure API for text handling and improve code readability