@@ -20,10 +20,12 @@ package com.volmit.adapt.content.item;
 
 import com.volmit.adapt.Adapt;
 import com.volmit.adapt.api.item.DataItem;
-import com.volmit.adapt.util.C;
 import com.volmit.adapt.util.Localizer;
+import com.volmit.adapt.util.Components;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
@@ -64,9 +66,10 @@ public class BoundRedstoneTorch implements DataItem<BoundRedstoneTorch.Data> {
 
     public static boolean isBindableItem(ItemStack t) {
         if (t.getType().equals(Material.REDSTONE_TORCH)) {
-            if (t.getItemMeta() != null && t.getItemMeta().getLore() != null) {
-                if (t.getItemMeta().getLore().get(0)
-                        .contains(Localizer.dLocalize("items", "boundredstonetorch", "name"))) {
+            ItemMeta meta = t.getItemMeta();
+            if (meta != null && meta.hasLore() && meta.lore() != null && !meta.lore().isEmpty()) {
+                if (Components.plain(meta.lore().getFirst())
+                        .contains(Components.plain(Localizer.component("items", "boundredstonetorch", "name")))) {
                     Adapt.verbose("Torch is bindable: " + t.getType().name());
                     return true;
                 }
@@ -86,17 +89,25 @@ public class BoundRedstoneTorch implements DataItem<BoundRedstoneTorch.Data> {
     }
 
     @Override
-    public void applyLore(Data data, List<String> lore) {
-        lore.add(C.WHITE + Localizer.dLocalize("items", "boundredstonetorch", "name"));
-        lore.add(C.GRAY + Localizer.dLocalize("items", "boundredstonetorch", "usage1"));
-        lore.add(C.GRAY + Localizer.dLocalize("items", "boundredstonetorch", "usage2"));
+    public String getDataKey() {
+        return "bound_redstone_torch";
+    }
+
+    @Override
+    public void applyLore(Data data, List<Component> lore) {
+        lore.add(Components.mini("<white><text></white>",
+                Placeholder.component("text", Localizer.component("items", "boundredstonetorch", "name"))));
+        lore.add(Components.mini("<gray><text></gray>",
+                Placeholder.component("text", Localizer.component("items", "boundredstonetorch", "usage1"))));
+        lore.add(Components.mini("<gray><text></gray>",
+                Placeholder.component("text", Localizer.component("items", "boundredstonetorch", "usage2"))));
     }
 
     @Override
     public void applyMeta(Data data, ItemMeta meta) {
         meta.addEnchant(Enchantment.BINDING_CURSE, 10, true);
         meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES, ItemFlag.HIDE_ENCHANTS, ItemFlag.HIDE_DYE);
-        meta.setDisplayName(Localizer.dLocalize("items", "boundredstonetorch", "name"));
+        meta.displayName(Localizer.component("items", "boundredstonetorch", "name"));
     }
 
     @AllArgsConstructor
